--- a/first_amendment.html
+++ b/first_amendment.html
@@ -14,7 +14,7 @@
           href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Shall Make, Shall Be: Accessibility</title>
+        <title>Shall Make, Shall Be: First Amendment</title>
         <meta name="description" content="Shall Make, Shall Be: The Bill of Rights at Play">
         <meta name="keywords" content="Shall Make, Shall Be: The Bill of Rights at Play, Bill of Rights, Ten Amendments">
         <meta charset="utf-8">
@@ -68,58 +68,44 @@
            
 <div class="leftColumn">
 
-<h3>Wheelchair Access</h3>
-<p>
-    Federal Hall’s entrances and facilities are accessible to wheelchair users. An accessible entrance is located towards 
-    the back of the main floor rotunda on 15 Pine St. North. All informational stands and games are at wheelchair level. 
-    All restrooms are wheelchair accessible. Restrooms are located on the basement floor, which can be accessed through elevator.
-</p>
-<img src="images/spatialmap.png" style="max-width: 90%; margin-bottom: 4em" alt="A spatial map of Federal Hall">
+<h2>First Amendment</h2>
+<h3 class="regular_text">Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</h3>
+<img class="responsive_img" src="images/LexaWalsh_firstamendment.jpg">
 
-<h3>Individuals who are blind or have low vision</h3>
-<p>
-    Our website is compatible with screen readers. We recommend utilizing the website to learn more about the exhibition. 
-</p>
-<p style="margin-bottom: 4em">
-    Games have auditory and tactile feedback, and we use braille in our informational stands. Our personnel is trained 
-    to help anyone who requests it. 
-</p>
+<h2>Lexa Walsh</h2>
+<p>Special thanks to Leo Knapp for technical assistance</p>
 
-<h3>Individuals with intellectual or developmental disabilities</h3>
-<p style="margin-bottom: 4em">
-    Federall Hall’s basement provides a quiet area for individuals with intellectual or developmental disabilities. Please refer to the map 
-    above to locate all sitting and quiet areas. 
-</p>
+<h3><i>. . . Which By Their Very Utterance . . . </i>, 2022<br>
+<p>Wooden game board, electronics, computer, sound, website, printed matter<br>
+48 inches by 30 inches by 48 inches</p>
 
-<h3>QR CODES</h3>
-<p>
-    QR codes are placed throughout the Museum to provide features and resources created to enhance your visit. Here’s how to use them: 
-</p>
-<p style="padding-top:2em">
-   iOS Devices 
-</p>
-<li>Open the Camera app from the Home Screen, Control Center, or Lock Screen.</li>
-<li>Select the rear facing camera. Hold your device so that the QR code appears in the viewfinder in the Camera app. Your device recognizes 
-    the QR code and shows a notification.</li>
-<li>Tap the notification to open the link associated with the QR code.</li>
-<p style="padding-top:2em">
-    Android Devices 
- </p>
- <li>Open the camera app.</li>
- <li>Select the rear-facing camera in Photo or Camera mode and center the QR code that you want to scan on the screen.</li>
- <li>Tap the notification that pops up to open the link.</li>
- <p style="padding-top:2em">
-    If no notification appears, follow these instructions to use Google Lens:
- </p>
- <li>Tap the color lens icon in Google Assistant, or open the Google Lens app.</li>
- <li>Select the Search mode and center the QR code that you want to scan on the screen.</li>
- <li>Tap the notification that pops up to open the link.</li>
+<h4>Artist Commentary</h4>
+<p><i>. . . Which By Their Very Utterance . . .</i> is a physical, interactive audio experience for one or more players. Each button, when pressed, plays an audio clip related to freedom of speech. The inner circle of buttons offers long playing and polyphonic loops, while the outer circle provides short samples. The center button stops a loop. There are no explicit win conditions and players should combine freely!</p>
+
+<p>The First Amendment has a rich history of being exercised in sound: the freedoms of speech, religion, press, assembly, and protest reverberate in song and spoken language. <i>. . . Which By Their Very Utterance . . .</i> is a playable game/musical instrument/sound station that explores ideas embedded in the First Amendment. These ideas take shape in audio samples from educational videos, religious and spiritual practices, newsrooms, speeches, and marches, from Black Lives Matter protests to Stop the Steal rallies. I’ve selected samples referencing First Amendment court cases, such as those popularly known as “Scabby the Rat,” regarding the twelve-foot-tall inflatable rat called Scabby that has been used as a symbol in union disputes, and “the Cursing Cheerleader,” regarding the high school student whose social media post got her kicked off the junior varsity squad, as well as a few musical interludes (where I am practicing “fair use”). Visitors can exercise their own freedom of expression by playing the work. As they weave contemporary and historic sounds, they are emboldened to explore our First Amendment rights and to reflect on and interrogate their contents. An accompanying zine and website (www.utterance.space) allow users to dig more deeply into these sounds.</p>
+
+<p>This work invites courageous dialogue, curiosity, and fun. It also aims to promote equity, not only by inviting users’ participation and creativity but also through its varied content, to create new narratives that become ripe conversation starters. What do we uncover, for instance, when we juxtapose sounds from multiple religious practices, or play protests from opposing ideologies in tandem? I am particularly interested in the weaponization of cancel culture, a right-wing tactic that has been reclaimed by the left, often to its own detriment. Though it can be an effective tool for activism, it can also shut down meaningful exchange, reflecting the punitive culture and oppression many wish to overcome.</p>
+
+<p>I’ve included clips from Fox News along with clips of progressive critic Dan Kovalik and other samples. We need to live in a society that ensures the right to open communication and the practice of it. Simply having these rights does not mean we know how best to wield them. Therefore, I’ve provided tips on active listening in the accompanying zine. With the freedom guaranteed by the First Amendment comes great responsibility.</p>
+
+<h4>Curator Commentary</h4>
+<p>The First Amendment is a paradox. We retain the right to be heard, but not understood; we retain the right to speak, but also the right to misspeak; we retain the right to report, though not necessarily the truth. The amendment does not—and really, could it?—provide mechanisms to ensure comprehension, to parse truth from fiction, to authenticate. Indeed, the gulf between expression and knowledge is vast.</p>
+
+<p>Somewhere between a musical instrument and a game of whack-a-mole, Lexa Walsh’s <i>. . . Which By Their Very Utterance . . .</i> lays these paradoxes bare and exposes the gap between the protection of one’s right to express and the ripples created by that expression. Walsh’s work treats all utterances as equally valid: protests against police brutality against Black people are on the same ground as cries of support for election falsehoods, recordings from court cases with oppositional outcomes, excerpts from cultural practices ranging from education to music to religion. The presumed neutrality of the audio tracks belies the inequities in the First Amendment—if everything is of equal standing, how can we reasonably find meaning in the cacophony?</p>
+
+<p>Walsh’s work invites us to play these recordings by pressing large buttons. The more buttons the player presses, the more recordings play back, leading to a barrage of First Amendment–supported utterances. How we receive, interpret, and act upon these sounds is totally up to the player and their spectators. Not unlike the First Amendment, the work does not suggest why you might want to do this; it only presents you with the opportunity. Do you choose to engage playfully in order to have a little fun? Aesthetically, as if performing with a musical instrument? Methodically, so as to carefully consider each excerpt? With the spirit of a spoilsport to create chaos? Polemically, to draw attention to a particular utterance and its point of view? . . . Which By Their Very Utterance . . . distills the First Amendment to its essence, leaving us to find purpose and meaning not only in what we say but also in how we receive that uttered by others.</p>
+
+<hr>
+
+<p><strong>Lexa Walsh</strong> makes projects, exhibitions, publications and objects, employing social engagement, institutional critique, radical hospitality and community building. Her upbringing as the youngest child of fifteen informs her work, as does practicing collectivity while coming of age in the post-punk scene of the 1990’s Bay Area. Embedded in her practice, she works as an arts laborer, organizer, curator and archivist. Walsh has founded or co-founded several arts platforms, including the Heinz Afterworld Lounge, an experimental music venue; Toychestra, an all-women, all-toy instrument ensemble; Oakland Stock, a branch of the Sunday Soup crowdfunding network; and most recently, the Bay Area Contemporary Arts Archive, a platform for the preservation of arts ephemera. Walsh has also worked as an artist-in-residence and/or curator at a variety of arts institutions, including a term as Social Practice Artist-in-Residence at the Portland Art Museum, and several years as a curator and administrator at CESTA, a Czech art center. She holds an MFA from Portland State University’s Art & Social Practice program and a BFA from California College of Arts and Crafts.</p>
+<p><a href="https://www.lexawalsh.com/" target="new">www.lexawalsh.com</a></p>
+
 
 </div>
 
 <!-- ------ Right Column -------- -->
 
-            <!-- <div class="rightColumn">
+            <div class="rightColumn">
                 <h3>1</h3>
                 <h2>Freedom of Religion, Speech, Press, Assembly, Petition</h2>
                 <p style="font-size:14px">Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p>
@@ -159,7 +145,7 @@
                 <h3>10</h3>
                 <h2>Separation of Powers and Federalism</h2>
                 <p style="font-size:14px">The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p>
-</div> -->
+</div>
                 
         </main>
             <footer>
