--- a/second_amendment.html
+++ b/second_amendment.html
@@ -14,7 +14,7 @@
           href="https://fonts.googleapis.com/css2?family=Rubik+Mono+One">
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Shall Make, Shall Be: Accessibility</title>
+        <title>Shall Make, Shall Be: Second Amendment</title>
         <meta name="description" content="Shall Make, Shall Be: The Bill of Rights at Play">
         <meta name="keywords" content="Shall Make, Shall Be: The Bill of Rights at Play, Bill of Rights, Ten Amendments">
         <meta charset="utf-8">
@@ -68,58 +68,60 @@
            
 <div class="leftColumn">
 
-<h3>Wheelchair Access</h3>
-<p>
-    Federal Hall’s entrances and facilities are accessible to wheelchair users. An accessible entrance is located towards 
-    the back of the main floor rotunda on 15 Pine St. North. All informational stands and games are at wheelchair level. 
-    All restrooms are wheelchair accessible. Restrooms are located on the basement floor, which can be accessed through elevator.
-</p>
-<img src="images/spatialmap.png" style="max-width: 90%; margin-bottom: 4em" alt="A spatial map of Federal Hall">
+<h2>Second Amendment</h2>
+<h3 class="regular_text">A well regulated Militia, being necessary to the security of a free State, the right of the people to keep and bear Arms, shall not be infringed.</h3>
+<img class="responsive_img" src="images/AndyMalone_secondamendment.jpg">
 
-<h3>Individuals who are blind or have low vision</h3>
-<p>
-    Our website is compatible with screen readers. We recommend utilizing the website to learn more about the exhibition. 
-</p>
-<p style="margin-bottom: 4em">
-    Games have auditory and tactile feedback, and we use braille in our informational stands. Our personnel is trained 
-    to help anyone who requests it. 
-</p>
+<h2>Andy Malone</h2>
 
-<h3>Individuals with intellectual or developmental disabilities</h3>
-<p style="margin-bottom: 4em">
-    Federall Hall’s basement provides a quiet area for individuals with intellectual or developmental disabilities. Please refer to the map 
-    above to locate all sitting and quiet areas. 
-</p>
+<h3><i>Standoff</i>, 2022<br>
+<p>Wooden puzzle with mechanisms<br>
+23 inches by 31 inches by 66 inches</p>
 
-<h3>QR CODES</h3>
-<p>
-    QR codes are placed throughout the Museum to provide features and resources created to enhance your visit. Here’s how to use them: 
-</p>
-<p style="padding-top:2em">
-   iOS Devices 
-</p>
-<li>Open the Camera app from the Home Screen, Control Center, or Lock Screen.</li>
-<li>Select the rear facing camera. Hold your device so that the QR code appears in the viewfinder in the Camera app. Your device recognizes 
-    the QR code and shows a notification.</li>
-<li>Tap the notification to open the link associated with the QR code.</li>
-<p style="padding-top:2em">
-    Android Devices 
- </p>
- <li>Open the camera app.</li>
- <li>Select the rear-facing camera in Photo or Camera mode and center the QR code that you want to scan on the screen.</li>
- <li>Tap the notification that pops up to open the link.</li>
- <p style="padding-top:2em">
-    If no notification appears, follow these instructions to use Google Lens:
- </p>
- <li>Tap the color lens icon in Google Assistant, or open the Google Lens app.</li>
- <li>Select the Search mode and center the QR code that you want to scan on the screen.</li>
- <li>Tap the notification that pops up to open the link.</li>
+<h4>Artist Commentary</h4>
+<p><i>Standoff</i> is a physical combination puzzle that can be solved by sliding eight tiles into the correct configuration. Each tile features two carved fingers pointed in a “gun hand” pose. The player manipulates the tiles so the fingers are pointed at each other, creating a balance, or a standoff. This represents my ideal interpretation of the Second Amendment: a means to create equilibrium.</p>
+
+<p>Once the puzzle is solved, buttons on the front of the table are activated and may be pressed to trigger mechanical movements in the back box. These movements serve as a commentary on American gun culture, evoking the complicated legacy of the Second Amendment. Before a player leaves the table, the puzzle should be scrambled for the next player.</p>
+
+<p>I approached this project by first examining the idealistic notions behind the Second Amendment and then juxtaposing them with reflections on the impact of modern gun culture.</p>
+
+<p><i>A standoff is a form of equilibrium.</i></p>
+
+<p>The Second Amendment was included in the Bill of Rights to protect the right of American citizens to legally own and use firearms. The founders correlated “arms” with perseverance and independence. The Second Amendment renders any prohibitive regulations on arms unconstitutional. For early Americans, being armed was a way to maintain equilibrium between the people and entities that might do them harm, be it criminals, wildlife, an invading army, or municipal overreach. In this utopian vision, the right to bear arms maintains a level playing field.</p>
+
+<p><i>A standoff only occurs if both sides are balanced.</i></p>
+
+<p>In <i>Standoff</i>, the ideal interpretation of the “right to bear arms” is abstracted in a sliding puzzle. Each of the sliding tiles incorporates carved hands pointed in the “gun pose,” an almost universally understood gesture. To solve the puzzle, the viewer must manipulate the tiles so that the fingers all point at each other, thus creating a counterbalance, or a standoff.</p>
+
+<p><i>A standoff is the uneasy peace created by the threat of mutually assured destruction.</i></p>
+
+<p>Once the puzzle is complete, motorized mechanisms can be activated by pushing buttons on the front of the cabinet, a bridge between theory and actuality. The abstracted simplicity gives way to a complicated legacy of racism, classism, and cruelty. One of the mechanisms features an accidental musical composition entitled “Aversion Therapy,” which addresses my personal relationship with firearms.</p>
+
+<p><i>A standoff is a contest in which there is no winner.</i></p>
+
+<p>Standoff is about appreciating the spirit of the Second Amendment while despising gun violence. It is about reconciling American mythology with American brutality.</p>
+
+<p><i>Huge thanks to Jeff Smith (SmithMade), Brian Covington (Proto Cast Inc.), Niko Solomos (Display Group), Ed O’Toole (George P. Johnson), Wendy Marvel (FlipBooKit), David Smiertka, Brad Litwin, and JP Kelly for their fabrication support and expertise. I would also like to send love to my wife, Elaine, and my children, Julia and Martin, for their patience, encouragement, and inspiration.</i></p>
+
+<h4>Curator Commentary</h4>
+<p>One working mental model of how, exactly, guns work is based on the loading of a revolver: someone loads six bullets into the cylinder, holds the gun by the handle, gives it a flick to spin the cylinder, then a flick in the other direction to reseat the cylinder in the frame, points the barrel toward the target, and pulls the trigger, which releases the hammer, which in turn pushes a bullet out of the cylinder, through the barrel, and toward the target. Or maybe your understanding comes from a more contemporary gun with a magazine: bullets are one by one fed into a clip, which is in turn seated in the handle, enabling each bullet to be propelled into the cylinder for firing.</p>
+
+<p>The simplicity of these mechanical devices frames how we think all guns work, more or less. Guns, in other words, are yet another deadly “black box” in our lives, the complexity of which is masked by the simplistic model we use to understand them. This is a predicament of our post-mechanical, post-information world: we have made machines to augment us, to make us faster, smarter, more powerful. But do these machines pull this off? Do they pull this off in ways that better our lives and that don’t make them worse? Do these black boxes enhance both the good and the bad in the human condition?</p>
+
+<p>Andy Malone’s <i>Standoff</i> presents a literal and figurative Rube Goldberg-meets-slide-puzzle conception of the goings-on inside a gun and within the consequences of eight gun-wielding people. Players slide the puzzle pieces seeking the correct configuration of pointing fingers. The pointing-finger-mounted puzzle squares in turn trigger gears, levers, and pistons in order to enact mechanical and social tensions that lead to the brandishing of these violent black boxes. The mechanical complexity of the work nods to both the absurdity of machines holding such sway over us and the inevitability that black boxes, once in existence, seem unstoppable.</p>
+
+<p>When certain conditions are met, and the puzzle pieces are in the right order, the work strikes a chord—once more, literally and figuratively. The sharp strike of a fired gun makes real the power of the black box, unmasking its violent purpose. Even for those keen on guns, this sound is too much. Protective devices shield the shooter from this striking reality. This sound is the most literal aspect of Standoff, bringing us back from the mechanical wonder of Malone’s craft skills to the jarring reality of these black boxes that augment humanity’s violent instincts.</p>
+
+<hr>
+
+<p><strong>Andy Malone</strong> holds a Bachelor of Architecture degree from the University of Detroit Mercy, and has worked in the exhibit design and custom furniture industry for over 25 years. Notable clients include Google, Twitch, Konami, Salesforce, Dolby, LG, Dodge, HP, T-Mobile, and Bethesda Games. His playable sculptures and games have been shown in over 75 exhibitions since 1995, including two recent solo exhibitions: Play Room (2017) and Happy Accidents (2019). As a curator of game arts, Malone co-organized Game Show Detroit (2006) at the Contemporary Art Institute of Detroit and Game Show NYC (2011) at Columbia University. Malone also curated the Bravo! Bravo! Art Exhibition at the Detroit Opera House in 2004 and 2005. Malone currently serves as Vice President of HATCH, an interdisciplinary arts center in Hamtramck, Michigan.</p>
+<p><a href="http://www.andymalone.com/" target="new">www.andymalone.com</a></p>
 
 </div>
 
 <!-- ------ Right Column -------- -->
 
-            <!-- <div class="rightColumn">
+            <div class="rightColumn">
                 <h3>1</h3>
                 <h2>Freedom of Religion, Speech, Press, Assembly, Petition</h2>
                 <p style="font-size:14px">Congress shall make no law respecting an establishment of religion, or prohibiting the free exercise thereof; or abridging the freedom of speech, or of the press; or the right of the people peaceably to assemble, and to petition the Government for a redress of grievances.</p>
@@ -159,7 +161,7 @@
                 <h3>10</h3>
                 <h2>Separation of Powers and Federalism</h2>
                 <p style="font-size:14px">The powers not delegated to the United States by the Constitution, nor prohibited by it to the States, are reserved to the States respectively, or to the people.</p>
-</div> -->
+</div>
                 
         </main>
             <footer>
